[package]
authors = ["Nikhil K <nikhilkalige@gmail.com>"]
name = "bikepov"
repository = "https://github.com/nikhilkalige/bikepov"
version = "0.1.8"
license = "MIT"

[dependencies]
cortex-m = "0.3.0"
cortex-m-rtfm = "0.2.0"
cortex-m-semihosting = "0.2.0"
static-ref = "0.2.0"
numtoa = "0.0.7"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"

# [dependencies.stm32f411]
# optional = false
# path = "../stm32f411/"

# [dependencies.futures]
# version = "0.1.14"
# default-features = false

[dependencies.bsp]
optional = false
path = "../bsp/"

# [dependencies.either]
# default-features = false
# version = "1.1.0"

# [dependencies.blue-pill]
# git = "https://github.com/japaric/blue-pill"
#rev = "2b7d5c56b25f4efad6c7c40042f884cbecb47c0b"

[dependencies.byteorder]
default-features = false
version = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.0"

[dependencies.nb]
git = "https://github.com/japaric/nb"
optional = false

[profile.release]
debug = true
lto = true
