[package]
authors = ["Nikhil K <nikhilkalige@gmail.com>"]
name = "bikepov"
repository = "https://github.com/nikhilkalige/bikepov"
version = "0.1.8"
license = "MIT"

[dependencies]
cortex-m = { git = "https://github.com/japaric/cortex-m" }
# cortex-m-rtfm = "0.2.0"
cortex-m-semihosting = "0.2.0"
static-ref = "0.2.0"
numtoa = "0.0.7"

[dependencies.embedded-hal]
# git = "https://github.com/japaric/embedded-hal"
path = "../../rust-resources/embedded-hal/"

[dependencies.bsp]
optional = false
path = "../bsp/"

[dependencies.tlc5955]
optional = false
path = "../tlc5955/"

[dependencies.fastled]
optional = false
path = "../fastled/"

[dependencies.logger]
path = "../logger"

[dependencies.byteorder]
default-features = false
version = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.9"

[dependencies.cortex-m-rtfm]
git = "https://github.com/japaric/cortex-m-rtfm"

[dependencies.nb]
git = "https://github.com/japaric/nb"
optional = false

[profile.release]
debug = true
lto = true

[profile.dev]
codegen-units = 1
incremental = false